--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
-    "start": "npm run build && cd server && node server.js",
+    "start": "cd server && node server.js",
     "server": "cd server node server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
     "client": "cd client && npm start"
+  },
+  "engines": {
+    "node": "^17.4.0"
   },
   "keywords": [],
   "author": "",
