--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
     "webpack": "^5.69.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "html-webpack-plugin": "^5.3.2"    
   }
 }
