--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
     "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^6.2.4"
+    "workbox-webpack-plugin": "^6.2.4",
+    "html-webpack-plugin": "^5.3.2"
   }
 }
